--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>أجير</title>
   </head>
-  <body style="text-align: center">
-    <br>
+  <body style="text-align: center;background: radial-gradient(black, transparent);color: white;">
+    <br><br>
     <h1>أجير</h1>
     <h1>www.ajeer.sa</h1>
-    <br>
-    <br>
-    <h2><a href="mailto:info@ajeer.sa"></a>info@ajeer.sa</h2>
+    <br><br>
+    <h2><a href="mailto:info@ajeer.sa">info@ajeer.sa</a></h2>
+    <br><br>
   </body>
 </html>
