--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>أجير</title>
   </head>
-  <body style="text-align: center;background: radial-gradient(black, transparent);color: white;">
+  <body style="text-align: center; background: radial-gradient(#39e, transparent); color: white;">
     <br><br>
     <h1>أجير</h1>
     <h1>www.ajeer.sa</h1>
