--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8">
     <title>أجير</title>
   </head>
-  <body style="text-align: center; background: radial-gradient(#39e, transparent); color: white;">
-    <br><br><br><br>
+  <body style="text-align: center;background: radial-gradient(#607D8B, #2d789cc2);color: white;font-size: 60px;height: 1px;">
+    <br>
     <h1>أجير</h1>
-    <br><br>
     <h1>www.ajeer.sa</h1>
-    <br><br><br><br>
-    <h2><a href="mailto:info@ajeer.sa">info@ajeer.sa</a></h2>
-    <br><br>
+    <br>
+    <a href="mailto:info@ajeer.sa">info@ajeer.sa</a>
   </body>
 </html>
