--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="utf-8">
     <title>أجير</title>
   </head>
-  <body style="text-align: center;background: radial-gradient(#607D8B, #2d789cc2);color: white;font-size: 50px;height: 1px;">
+<body style="text-align: center;background: radial-gradient(#607D8B, #2d789cc2);color: white;font-size: 50px;height: 1px;">
     <br>
     <h1>أجير</h1>
     <h1>www.ajeer.sa</h1>
     <br>
-    <a href="mailto:info@ajeer.sa">info@ajeer.sa</a>
-  </body>
+    <p style="
+    background: white;
+    margin: 0 150px;
+    border-radius: 20px;
+    padding-bottom: 5px;
+"><a href="mailto:info@ajeer.sa" style="
+    text-decoration: none;
+">info@ajeer.sa</a></p>
+</body>
 </html>
