--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <body>
 
     <div class="container">
-        <h1>Ajeer | أجير</h1>
+        <h1>أجير</h1>
 	<h3>www.ajeer.sa</h3>
         <a href="mailto:info@ajeer.sa">info@ajeer.sa</a>
     </div>
